assignment1 link edit

--- a/index.html
+++ b/index.html
@@ -45,10 +45,8 @@
 
       <div style="padding:1em">
         <div style="padding:2em; background: #FFEED2; border-radius: 15px;">
-          <h4>Announcement <small style="font-size:0.7em">(Saturday 9.21.2024)</small></h4>
-          Hi everyone – welcome to the fall quarter, and thank you for your interest in this course! <br><br>
-
-          Quick announcement: This class has received significantly more registrations than expected, and we are currently unable to accommodate additional students for this quarter unless you are already registered. However, we welcome students to audit the lectures.
+          <h4>Announcement <small style="font-size:0.7em">(Monday 10.7.2024)</small></h4>
+          1) <a href="assignment1.html" target="_blank">Assignment 1</a> is released (Due Monday October 21). We recommend getting started early! 2) Class enrollment should now be finalized. Please reach out to the teaching staff if you're unsure about your enrollment status.
         </div>
       </div>
 
