--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
           <tr>
             <td class="lecture_date">W, 10/9</td>
-            <td class="lecture_titles">Interactive Worlds</td>
+            <td class="lecture_titles">Interactive Worlds <a href="static_dir/pdf/StanfordCS222_Lecture6.pdf" style="font-weight:500" target="_blank">[Slides]</a></td>
             <td>
               <p class="lecture_desc">
                 How should the generative agents we create interact with one another and with human users? What are the building blocks and environments in which these interactions should occur? A discussion of the environments and worlds where agents interact.
@@ -362,7 +362,7 @@
 
           <tr>
             <td class="lecture_date">W, 11/20</td>
-            <td class="lecture_titles">Guest Lecture 2: TBD</td>
+            <td class="lecture_titles">Guest Lecture 2: <a href="https://serinachang5.github.io/" target="_blank">Serina Chang</a></td>
             <td>
               <p class="lecture_desc">
                 <h6 class="req_readings">Required readings:</h6> TBD
