Final Project Proposal

--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
 
       <div style="padding:1em">
         <div style="padding:2em; background: #FFEED2; border-radius: 15px;">
-          <h4>Announcement <small style="font-size:0.7em">(Monday 10.7.2024)</small></h4>
-          1) <a href="assignment1.html" target="_blank">Assignment 1</a> is released (Due Monday October 21). We recommend getting started early! 2) Class enrollment should now be finalized. Please reach out to the teaching staff if you're unsure about your enrollment status.
+          <h4>Announcement <small style="font-size:0.7em"></small></h4>
+          <em>Monday 10.14.2024.</em> The instructions for the <a href="final_project_proposal.html" target="_blank">project proposal</a> have been released! They are due the same day as your presentation.<br><br>
+          <em>Monday 10.7.2024.</em> 1) <a href="assignment1.html" target="_blank">Assignment 1</a> is released (Due Monday October 21). We recommend getting started early! 2) Class enrollment should now be finalized. Please reach out to the teaching staff if you're unsure about your enrollment status.
         </div>
       </div>
 
@@ -212,7 +213,8 @@
                 <li>A. Ashokkumar, L. Hewitt, I. Ghezae, R. Willer, Predicting Results of Social Science Experiments Using Large Language Models (2024). <a href="https://samim.io/dl/Predicting%20results%20of%20social%20science%20experiments%20using%20large%20language%20models.pdf" target="_blank">[pdf]</a></li>
               </ul>
             </td>
-            <td class="assignments"><span class="assignment_release">[Project Proposal Release]</span></td>
+            <td class="assignments">
+              <a href="final_project_proposal.html" target="_blank"><span class="assignment_release">[Project Proposal Release]</span></a>
           </tr>
 
           <tr>
