--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
           <tr>
             <td class="lecture_date">M, 10/14<br><span>(Week 4)</span></td>
-            <td class="lecture_titles">Believability vs. Accuracy</td>
+            <td class="lecture_titles">Believability vs. Accuracy <a href="static_dir/pdf/StanfordCS222_Lecture7.pdf" style="font-weight:500" target="_blank">[Slides]</a></td>
             <td>
               <p class="lecture_desc">
                 How do we know that our simulations are meaningful and representative of the world we live in? What are the axes for validating simulations, and what applications does each validation method empower? A discussion of methods for demonstrating simulation fidelity and their challenges.
