--- a/index.html
+++ b/index.html
@@ -226,8 +226,9 @@
               </p>
               <h6 class="req_readings">Required readings:</h6>
               <ul class="reading_list">
-                <li>Joon Sung Park, Carolyn Q. Zou, Aaron Shaw, Benjamin Mako Hill, Carrie J. Cai, Meredith Ringel Morris, Robb Willer, Percy Liang, Michael S. Bernstein. -- (2024). [pdf]</li>
                 <li>S. Ansolabehere, J. Rodden, J. M. Snyder Jr., The Strength of Issues: Using Multiple Measures to Gauge Preference Stability, Ideological Constraint, and Issue Voting. American Political Science Review (2008). <a href="https://www.cambridge.org/core/journals/american-political-science-review/article/strength-of-issues-using-multiple-measures-to-gauge-preference-stability-ideological-constraint-and-issue-voting/16F6AF97F7B71AA0112EC9ADF78B553A" target="_blank">[pdf]</a></li>
+                <li>(Optional) P. Resnick, N. Iacovou, M. Suchak, P. Bergstrom, J. Riedl, GroupLens: an open architecture for collaborative filtering of netnews. In Proceedings of the 1994 ACM Conference on Computer Supported Cooperative Work (CSCW '94), ACM, New York, NY, USA, 175-186 (1994). <a href="https://dl.acm.org/doi/10.1145/192844.192905" target="_blank">[pdf]</a></li>
+
               </ul>
             </td>
             <td class="assignments"></td>
