--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
           <tr>
             <td class="lecture_date">W, 10/16</td>
-            <td class="lecture_titles">Models of Individuals</td>
+            <td class="lecture_titles">Models of Individuals <a href="static_dir/pdf/StanfordCS222_Lecture8.pdf" style="font-weight:500" target="_blank">[Slides]</a></td>
             <td>
               <p class="lecture_desc">
                 How might we create models of individuals that simulate how real people might behave and feel? How does this align with the original vision of bottom-up simulations, and what new advances enable this now? A discussion of generative agents that model individual behavior.
