Serina guest lecture added

--- a/index.html
+++ b/index.html
@@ -368,8 +368,13 @@
             <td class="lecture_titles">Guest Lecture 2: <a href="https://serinachang5.github.io/" target="_blank">Serina Chang</a></td>
             <td>
               <p class="lecture_desc">
-                <h6 class="req_readings">Required readings:</h6> TBD
+                How might we simulate social networks with LLMs, and the dynamic processes over networks in the context of modeling disease spread (e.g., COVID)? This lecture will explore networks as an environment for simulations, and recent applications of AI in simulating complex systems.
               </p>
+              <h6 class="req_readings">Required readings:</h6>
+              <ul class="reading_list">
+                <li>S. Chang, E. Pierson, P. W. Koh, J. Gerardin, B. Redbird, D. Grusky, J. Leskovec, Mobility network models of COVID-19 explain inequities and inform reopening. Nature 589, 82-87 (2021).<a href="https://www.nature.com/articles/s41586-020-2923-3" target="_blank">[pdf]</a></li>
+                <li>S. Chang, Z. Lin, B. Yan, S. Bembde, Q. Xiu, C. H. Wong, Y. Qin, F. Kloster, A. Luo, R. Palleti, J. Leskovec, Learning production functions for supply chains with graph neural networks. Preprint (2024). <a href="https://arxiv.org/abs/2407.18772" target="_blank">[pdf]</a></li>
+              </ul>
             </td>
             <td class="assignments"></td>
           </tr>
@@ -411,4 +416,4 @@
     <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=rDNfvAHv84dw1Tk_JlTsLjTtnq6iYukX3dLUp5UICFY&cl=ffffff&w=a"></script>
     <a href="https://clustrmaps.com/site/1c1df" style="display:none !important"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=rDNfvAHv84dw1Tk_JlTsLjTtnq6iYukX3dLUp5UICFY&cl=ffffff" style="display:none !important"  /></a>
   </body>
-</html>
+</html> 
