--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
               <h6 class="req_readings">Required readings:</h6>
               <ul class="reading_list">
                 <li>E. Bruch, J. Atwell, Agent-Based Models in Empirical Social Research. Sociological Methods & Research (2015). <a href="https://journals.sagepub.com/doi/full/10.1177/0049124113506405" target="_blank">[pdf]</a></li>
-                <li>J. M. Epstein, R. L. Axtell, Growing Artificial Societies: Social Science from the Bottom Up (MIT Press, 1996). <a href="https://wtf.tw/ref/epstein_axtell.pdf" target="_blank">[pdf]</a></li>
+                <li>J. M. Epstein, R. L. Axtell, Growing Artificial Societies: Social Science from the Bottom Up (MIT Press, 1996): Chapter 1 and 2 <a href="https://wtf.tw/ref/epstein_axtell.pdf" target="_blank">[pdf]</a></li>
               </ul>
             </td>
             <td class="assignments"><span class="assignment_due">[Due: Assignment 1]</span><br><span class="assignment_release">[Assignment 2 Release]</span></td>
