--- a/index.html
+++ b/index.html
@@ -236,10 +236,10 @@
 
           <tr>
             <td class="lecture_date">M, 10/21<br><span>(Week 5)</span></td>
-            <td class="lecture_titles">Generative Agent-Based Models</td>
+            <td class="lecture_titles">AgentBank-CS222</td>
             <td>
               <p class="lecture_desc">
-                How can we combine generative agents of individuals to create a new generation of agent-based models capable of solving complex problems? What are the building blocks of these models, and what questions might they enable us to address? How does this approach differ from the previous generation of agent-based models?
+                How might we create a shared resource of models that emulate individuals to power generative agent-based models? What ethical considerations and boundaries ought we to consider, and can we draw inspiration from prior works? In this lecture, we will create a bank of agents that represent CS222.
               </p>
               <h6 class="req_readings">Required readings:</h6>
               <ul class="reading_list">
@@ -247,15 +247,15 @@
                 <li>J. M. Epstein, R. L. Axtell, Growing Artificial Societies: Social Science from the Bottom Up (MIT Press, 1996): Chapter 1 and 2 <a href="https://wtf.tw/ref/epstein_axtell.pdf" target="_blank">[pdf]</a></li>
               </ul>
             </td>
-            <td class="assignments"><span class="assignment_due">[Due: Assignment 1]</span><br><span class="assignment_release">[Assignment 2 Release]</span></td>
+            <td class="assignments"><span class="assignment_due">[Due: Assignment 1]</span><br><span class="assignment_release">[Assignment 2 Release]</span><br><a href="agent_bank222_inclass.html" target="_blank"><span class="assignment_release">[In class activity]</span></a></td>
           </tr>
 
           <tr>
             <td class="lecture_date">W, 10/23</td>
-            <td class="lecture_titles">AgentBank-CS222</td>
+            <td class="lecture_titles">Generative Agent-Based Models</td>
             <td>
               <p class="lecture_desc">
-                How might we create a shared resource of models that emulate individuals to power generative agent-based models? What ethical considerations and boundaries ought we to consider, and can we draw inspiration from prior works? In this lecture, we will create a bank of agents that represent CS222.
+                How can we combine generative agents of individuals to create a new generation of agent-based models capable of solving complex problems? What are the building blocks of these models, and what questions might they enable us to address? How does this approach differ from the previous generation of agent-based models?
               </p>
               <h6 class="req_readings">Required readings:</h6>
               <ul class="reading_list">
