--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
           <tr>
             <td class="lecture_date">M, 10/21<br><span>(Week 5)</span></td>
-            <td class="lecture_titles">AgentBank-CS222</td>
+            <td class="lecture_titles">AgentBank-CS222 <a href="static_dir/pdf/StanfordCS222_Lecture9.pdf" style="font-weight:500" target="_blank">[Slides]</a></td>
             <td>
               <p class="lecture_desc">
                 How might we create a shared resource of models that emulate individuals to power generative agent-based models? What ethical considerations and boundaries ought we to consider, and can we draw inspiration from prior works? In this lecture, we will create a bank of agents that represent CS222.
