--- a/assignment1.html
+++ b/assignment1.html
@@ -207,7 +207,7 @@ curr_agent.save("SyntheticCS222", "matthew_jacobs")</code></pre>
         <ul>
             <li>Both files in <code>/report/matthew_jacobs/</code></li>
             <li><code>/report/report.txt</code></li>
-            <li>The compressed <code>/simulation_engine/generative_agent/</code> folder</li>
+            <li>The compressed <code>/generative_agent/</code> folder</li>
             <li>If you completed the optional extra credit, submit the <code>/bonus_agent.py</code> file</li>
         </ul>
     </div>
