--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
       <div style="padding:1em">
         <div style="padding:2em; background: #FFEED2; border-radius: 15px;">
           <h4>Announcement <small style="font-size:0.7em"></small></h4>
+          <em>Monday 10.21.2024.</em> 1) <a href="assignment2.html" target="_blank">Assignment 2</a> is released (Due Monday October 30). We recommend getting started early!
           <em>Monday 10.14.2024.</em> The instructions for the <a href="final_project_proposal.html" target="_blank">project proposal</a> have been released! They are due the same day as your presentation.<br><br>
-          <em>Monday 10.7.2024.</em> 1) <a href="assignment1.html" target="_blank">Assignment 1</a> is released (Due Monday October 21). We recommend getting started early! 2) Class enrollment should now be finalized. Please reach out to the teaching staff if you're unsure about your enrollment status.
         </div>
       </div>
 
@@ -247,7 +247,7 @@
                 <li>J. M. Epstein, R. L. Axtell, Growing Artificial Societies: Social Science from the Bottom Up (MIT Press, 1996): Chapter 1 and 2 <a href="https://wtf.tw/ref/epstein_axtell.pdf" target="_blank">[pdf]</a></li>
               </ul>
             </td>
-            <td class="assignments"><span class="assignment_due">[Due: Assignment 1]</span><br><span class="assignment_release">[Assignment 2 Release]</span><br><a href="agent_bank222_inclass.html" target="_blank"><span class="assignment_release">[In class activity]</span></a></td>
+            <td class="assignments"><span class="assignment_due">[Due: Assignment 1]</span><br><a href="assignment2.html" target="_blank"><span class="assignment_release">[Assignment 2 Release]</span></a><br><a href="agent_bank222_inclass.html" target="_blank"><span class="assignment_release">[In class activity]</span></a></td>
           </tr>
 
           <tr>
