--- a/assignment2.html
+++ b/assignment2.html
@@ -74,7 +74,7 @@
       <li>Save the interaction log one last time.</li>
     </ol>
 
-    <h3>Part 4: Analysis and Submission</h3> <p>For this assignment, you will submit a writeup of your analysis, reflecting on different aspects of persona development, simulation outcomes, and your overall learning process. Be sure to address each question thoughtfully and thoroughly. As we mentioned in class, feel free to make other changes in your exploration, such as the position the agents are competing for, the number of rounds, or the prompts.</p> <h4>Section 1: Simulation Consistency (3 points)</h4> <p>Describe the persona you created in Part 1, including their name and description.</p> <ul> <li>Reflect briefly on how you approached the creation of each persona. What traits or characteristics did you prioritize, and why?</li><li>You ran the simulation multiple times -- reflect on the similarities and differences between the runs, and include a detailed analysis of why you think those similarities and differences arose.</li> </ul> <h4>Section 2: Persona Refinement and Iteration (3 points)</h4> <p>Reflect on the process of refining your agent persona in Part 2.</p> <ul> <li>Describe the changes you made to your original persona and why you made them. Did you prioritize certain traits or behaviors to improve their performance as a leader?</li> <li>Discuss how the refined persona performed compared to the original one. What specific improvements did you notice, and why do you think these changes were effective?</li> <li>Were there any adjustments you tried that didn’t work as expected? If so, why do you think that happened?</li> <li>Overall, how controllable was your agent? Did you find any traits that make the agent consistently perform better or worse?</li></ul> <h4>Section 3: (Un)predictable Outcomes (3 points)</h4> <p>In Part 3, you created five new agents and ran a new multi-agent simulation. Reflect on this experience:</p> <ul> <li>Before running the simulation, we asked you to predict the outcome: which agent did you expect to win the election, and why?</li> <li>After running the simulation and comparing the result with your prediction, was your prediction correct? If not, what factors do you think led to the unexpected outcome?</li> </ul> <h4>Section 4: Simulation Dynamics (3 points)</h4> <p>Reflect on the overall dynamics of the multi-agent simulation process, focusing on what you learned about agent behavior and interaction:</p> <ul> <li>What were the key similarities and differences you observed across multiple simulation runs? Why do you think some behaviors were consistent while others changed?</li> <li>What surprised you about the agents’ behaviors? How did you interpret these unexpected behaviors?</li> <li>If any personas were based on real people or existing characters, how closely did the agent's behavior match your expectations?</li> </ul> <h4>Extra Credit: Agent Tournament (1 point)</h4> <p>For extra credit, submit a persona to participate in a class-wide tournament. Your agent will be evaluated based on how well it does compared to other agents from your classmates.</p> <ul> <li>If you would like to participate, download one log from a simulation featuring your strongest fighter, and submit that alongside your writeup on Gradescope.</li></ul>
+    <h3>Part 4: Analysis and Submission</h3> <p>For this assignment, you will submit a writeup of your analysis, reflecting on different aspects of persona development, simulation outcomes, and your overall learning process. Be sure to address each question thoughtfully and thoroughly. As we mentioned in class, feel free to make other changes in your exploration, such as the position the agents are competing for, the number of rounds, or the prompts.</p> <h4>Section 1: Simulation Consistency (3 points)</h4> <p>Describe the persona you created in Part 1, including their name and description.</p> <ul> <li>Reflect briefly on how you approached the creation of each persona. What traits or characteristics did you prioritize, and why?</li><li>You ran the simulation multiple times -- reflect on the similarities and differences between the runs, and include a detailed analysis of why you think those similarities and differences arose.</li> </ul> <h4>Section 2: Persona Refinement and Iteration (3 points)</h4> <p>Reflect on the process of refining your agent persona in Part 2.</p> <ul> <li>Describe the changes you made to your original persona and why you made them. Did you prioritize certain traits or behaviors to improve their performance as a leader?</li> <li>Discuss how the refined persona performed compared to the original one. What specific improvements did you notice, and why do you think these changes were effective?</li> <li>Were there any adjustments you tried that didn’t work as expected? If so, why do you think that happened?</li> <li>Overall, how controllable was your agent? Did you find any traits that make the agent consistently perform better or worse?</li></ul> <h4>Section 3: (Un)predictable Outcomes (3 points)</h4> <p>In Part 3, you created five new agents and ran a new multi-agent simulation. Reflect on this experience:</p> <ul> <li>Before running the simulation, we asked you to predict the outcome: which agent did you expect to win the election, and why?</li> <li>After running the simulation and comparing the result with your prediction, was your prediction correct? If not, what factors do you think led to the unexpected outcome?</li> </ul> <h4>Section 4: Simulation Dynamics (3 points)</h4> <p>Reflect on the overall dynamics of the multi-agent simulation process, focusing on what you learned about agent behavior and interaction:</p> <ul> <li>What were the key similarities and differences you observed across multiple simulation runs? Why do you think some behaviors were consistent while others changed?</li> <li>What surprised you about the agents’ behaviors? How did you interpret these unexpected behaviors?</li> <li>If any personas were based on real people or existing characters, how closely did the agent's behavior match your expectations?</li><li>What patterns have you noticed in your observations, and what theories do you have about agent behavior based on these observations? How did your mental model of agent behavior change over time?</li> </ul> <h4>Extra Credit: Agent Tournament (1 point)</h4> <p>For extra credit, submit a persona to participate in a class-wide tournament. Your agent will be evaluated based on how well it does compared to other agents from your classmates.</p> <ul> <li>If you would like to participate, download one log from a simulation featuring your strongest fighter, and submit that alongside your writeup on Gradescope.</li></ul>
 
     <h3>Grading</h3>
 <p>This assignment will be graded out of 12 points. The breakdown is as follows:</p>
@@ -89,14 +89,14 @@
     </thead>
     <tbody>
         <tr>
-            <td>Persona Descriptions</td>
+            <td>Simulation Consistency</td>
             <td>3</td>
             <td>
                 <ul>
-                    <li>3 points: All personas are detailed, unique, and meet the 100-word minimum. Backgrounds, motivations, and communication styles are clearly described.</li>
-                    <li>2 points: Personas are present but lack some depth or detail, or fewer than five personas were submitted.</li>
-                    <li>1 point: Some personas are incomplete, too brief, or missing key details.</li>
-                    <li>0 points: Persona descriptions are missing or extremely incomplete.</li>
+                    <li>3 points: The analysis of the simulation's consistency is thorough and detailed, stating the outcomes that were observed and thoughtfully synthesizing those results into theories of agent behavior.</li>
+                    <li>2 points: The analysis is present but lacks some depth or detail, or fewer simulation runs were analyzed than required.</li>
+                    <li>1 point: The analysis is incomplete, too brief, or missing key details about the simulation outcomes.</li>
+                    <li>0 points: The analysis is missing or extremely incomplete.</li>
                 </ul>
             </td>
         </tr>
@@ -105,33 +105,33 @@
             <td>3</td>
             <td>
                 <ul>
-                    <li>3 points: Refined persona shows significant improvement with well-justified changes. Detailed reflections on what worked and what didn’t.</li>
-                    <li>2 points: Refinement shows some improvements, but the reasoning is less clear or lacks detailed reflection.</li>
-                    <li>1 point: Minimal changes made with little reflection on the outcome or reasoning.</li>
-                    <li>0 points: No refinement or reflection provided.</li>
+                    <li>3 points: The analysis of the refined persona is clearly documented, with a detailed explanation of what changes were made and why. Additionally, the changes are well-justified by theories derived from observation of the simulation outcomes.</li>
+                    <li>2 points: The analysis of the refined persona is present but lacks some depth or detail, or fewer refinements were made than required. The changes described, but not justified by any observations or theories.</li>
+                    <li>1 point: The analysis of the refined persona is incomplete, too brief, or missing key details about the changes made.</li>
+                    <li>0 points: The analysis of the refined persona is missing or extremely incomplete.</li>
                 </ul>
             </td>
         </tr>
         <tr>
-            <td>Simulation Outcome Prediction</td>
+            <td>(Un)predictable Outcomes</td>
             <td>3</td>
             <td>
                 <ul>
-                    <li>3 points: Clear, thoughtful prediction of the simulation outcome, with a detailed comparison to the actual result and reflections on any discrepancies.</li>
-                    <li>2 points: A prediction is provided, but the analysis of the result is less detailed or incomplete.</li>
-                    <li>1 point: Prediction is made, but little to no reflection on the outcome.</li>
+                    <li>3 points: A thoughtful and well-justified prediction of the simulation outcome was made, with a comparison to the actual result. The analysis includes substantial reflections on any discrepancies that occurred and introduces theories of agent behavior that explain why the outcome matched or did not match the prediction.</li>
+                    <li>2 points: A prediction is provided and justified by past observations, but the analysis of the result is less detailed or incomplete.</li>
+                    <li>1 point: A prediction was made haphazardly, and there is little to no reflection on the causal mechanisms that led to the outcome.</li>
                     <li>0 points: No prediction or reflection is provided.</li>
                 </ul>
             </td>
         </tr>
         <tr>
-            <td>Reflection on Simulation Dynamics</td>
+            <td>Simulation Dynamics</td>
             <td>3</td>
             <td>
                 <ul>
-                    <li>3 points: Detailed reflection on agent behaviors and interactions, including analysis of similarities, differences, and any surprising behaviors.</li>
-                    <li>2 points: Some reflection provided, but lacks depth in discussing agent behaviors or interactions.</li>
-                    <li>1 point: Minimal reflection, missing key insights or observations.</li>
+                    <li>3 points: Detailed reflection on agent behaviors and interactions, including clear reporting of all experimentation done, rationale for each change tested, and analysis of the capabilities and limitations of agents.</li>
+                    <li>2 points: Some reflection is provided, but lacks synthesis of observations into theories about the capabilities and limitations of agents.</li>
+                    <li>1 point: Minimal reflection is provided, missing key insights or observations.</li>
                     <li>0 points: No reflection or analysis of simulation dynamics.</li>
                 </ul>
             </td>
@@ -143,7 +143,7 @@
                 <ul>
                     <li>1 point: Your agent performed at the level of top 10% of the class.</li>
                     <li>0.5 point: Your agent performed at the level of top 25% of the class.</li>
-                    <li>0 points: No submission.</li>
+                    <li>0 points: No submission, or agent performed below the top 25% of the class.</li>
                 </ul>
             </td>
         </tr>
