--- a/index.html
+++ b/index.html
@@ -338,18 +338,7 @@
           </tr>
 
           <tr>
-            <td class="lecture_date">W, 11/13</td>
-            <td class="lecture_titles">Guest Lecture 1: TBD</td>
-            <td>
-              <p class="lecture_desc">
-                <h6 class="req_readings">Required readings:</h6> TBD
-              </p>
-            </td>
-            <td class="assignments"></td>
-          </tr>
-
-          <tr>
-            <td class="lecture_date">M, 11/18<br><span>(Week 9)</span></td>
+            <td class="lecture_date">W, 11/13<br><span>(Week 9)</span></td>
             <td class="lecture_titles">Simulating Ourselves and Our Societies With AI</td>
             <td>
               <p class="lecture_desc">
@@ -365,10 +354,29 @@
           </tr>
 
           <tr>
+            <td class="lecture_date">M, 11/18</td>
+            <td class="lecture_titles">Guest Lecture 1: <a href="https://cs.stanford.edu/~merrie/" target="_blank">Meredith Ringel Morris</a><</td>
+            <td>
+              <p class="lecture_desc">
+                <strong>Anticipating the Impacts of Agentic Interactions: From Assistants to Clones to Ghosts</strong><br><br>
+                As computational agents become increasingly prevalent in various forms—ranging from assistants to clones to ghosts—understanding and anticipating their impact will be crucial in guiding the technology toward an empowering future. This lecture explores the potential effects of agentic interactions on society.
+              </p>
+              <h6 class="req_readings">Required readings:</h6>
+              <ul class="reading_list">
+                <li>M. R. Morris, J. R. Brubaker, Generative Ghosts: Anticipating Benefits and Risks of AI Aerlives. Proceedings of the Seventh AAAI/ACM Conference on AI, Ethics, and Society (AIES-24) (2024).<a href="https://arxiv.org/pdf/2402.01662" target="_blank">[pdf]</a></li>
+                <li>A. Manzini, G. Keeling, L. Alberts, S. Vallor, M. R. Morris, I. Gabriel, The Code That Binds Us: Navigating the Appropriateness of Human-AI Assistant Relationships. Proceedings of the Seventh AAAI/ACM Conference on AI, Ethics, and Society (AIES-24) (2024).<a href="https://ojs.aaai.org/index.php/AIES/article/view/31694/33861" target="_blank">[pdf]</a></li>
+              </ul>
+            </td>
+            <td class="assignments"></td>
+          </tr>
+
+          <tr>
             <td class="lecture_date">W, 11/20</td>
             <td class="lecture_titles">Guest Lecture 2: <a href="https://serinachang5.github.io/" target="_blank">Serina Chang</a></td>
             <td>
               <p class="lecture_desc">
+                <strong>Simulating Human Networks: Network Formation, Dynamics, and Outcomes</strong><br><br>
+
                 How might we simulate social networks with LLMs, and the dynamic processes over networks in the context of modeling disease spread (e.g., COVID)? This lecture will explore networks as an environment for simulations, and recent applications of AI in simulating complex systems.
               </p>
               <h6 class="req_readings">Required readings:</h6>
