--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 
           <tr>
             <td class="lecture_date">M, 11/18</td>
-            <td class="lecture_titles">Guest Lecture 1: <a href="https://cs.stanford.edu/~merrie/" target="_blank">Meredith Ringel Morris</a><</td>
+            <td class="lecture_titles">Guest Lecture 1: <a href="https://cs.stanford.edu/~merrie/" target="_blank">Meredith Ringel Morris</a></td>
             <td>
               <p class="lecture_desc">
                 <strong>Anticipating the Impacts of Agentic Interactions: From Assistants to Clones to Ghosts</strong><br><br>
