--- a/index.html
+++ b/index.html
@@ -355,10 +355,9 @@
 
           <tr>
             <td class="lecture_date">M, 11/18</td>
-            <td class="lecture_titles">Guest Lecture 1: <a href="https://cs.stanford.edu/~merrie/" target="_blank">Meredith Ringel Morris</a></td>
+            <td class="lecture_titles"><em>Guest Lecture 1</em><br><a href="https://cs.stanford.edu/~merrie/" target="_blank">Meredith Ringel Morris</a><br><br>Anticipating the Impacts of Agentic Interactions: From Assistants to Clones to Ghosts</td>
             <td>
               <p class="lecture_desc">
-                <strong>Anticipating the Impacts of Agentic Interactions: From Assistants to Clones to Ghosts</strong><br><br>
                 As computational agents become increasingly prevalent in various forms—ranging from assistants to clones to ghosts—understanding and anticipating their impact will be crucial in guiding the technology toward an empowering future. This lecture explores the potential effects of agentic interactions on society.
               </p>
               <h6 class="req_readings">Required readings:</h6>
@@ -372,11 +371,9 @@
 
           <tr>
             <td class="lecture_date">W, 11/20</td>
-            <td class="lecture_titles">Guest Lecture 2: <a href="https://serinachang5.github.io/" target="_blank">Serina Chang</a></td>
+            <td class="lecture_titles"><em>Guest Lecture 2</em><br><a href="https://serinachang5.github.io/" target="_blank">Serina Chang</a><br><br>Simulating Human Networks: Network Formation, Dynamics, and Outcomes</td>
             <td>
               <p class="lecture_desc">
-                <strong>Simulating Human Networks: Network Formation, Dynamics, and Outcomes</strong><br><br>
-
                 How might we simulate social networks with LLMs, and the dynamic processes over networks in the context of modeling disease spread (e.g., COVID)? This lecture will explore networks as an environment for simulations, and recent applications of AI in simulating complex systems.
               </p>
               <h6 class="req_readings">Required readings:</h6>
