--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
               </p>
               <h6 class="req_readings">Required readings:</h6>
               <ul class="reading_list">
-                <li>M. R. Morris, J. R. Brubaker, Generative Ghosts: Anticipating Benefits and Risks of AI Aerlives. Proceedings of the Seventh AAAI/ACM Conference on AI, Ethics, and Society (AIES-24) (2024).<a href="https://arxiv.org/pdf/2402.01662" target="_blank">[pdf]</a></li>
+                <li>M. R. Morris, J. R. Brubaker, Generative Ghosts: Anticipating Benefits and Risks of AI Aerlives. Preprint (2024).<a href="https://arxiv.org/pdf/2402.01662" target="_blank">[pdf]</a></li>
                 <li>A. Manzini, G. Keeling, L. Alberts, S. Vallor, M. R. Morris, I. Gabriel, The Code That Binds Us: Navigating the Appropriateness of Human-AI Assistant Relationships. Proceedings of the Seventh AAAI/ACM Conference on AI, Ethics, and Society (AIES-24) (2024).<a href="https://ojs.aaai.org/index.php/AIES/article/view/31694/33861" target="_blank">[pdf]</a></li>
               </ul>
             </td>
