--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 
           <tr>
             <td class="lecture_date">W, 10/23</td>
-            <td class="lecture_titles">Generative Agent-Based Models</td>
+            <td class="lecture_titles">Generative Agent-Based Models <a href="static_dir/pdf/StanfordCS222_Lecture10.pdf" style="font-weight:500" target="_blank">[Slides]</a></td>
             <td>
               <p class="lecture_desc">
                 How can we combine generative agents of individuals to create a new generation of agent-based models capable of solving complex problems? What are the building blocks of these models, and what questions might they enable us to address? How does this approach differ from the previous generation of agent-based models?
@@ -269,7 +269,7 @@
 
           <tr>
             <td class="lecture_date">M, 10/28<br><span>(Week 6)</span></td>
-            <td class="lecture_titles">Equilibria and Butterflies</td>
+            <td class="lecture_titles">Equilibria and Butterflies <a href="static_dir/pdf/StanfordCS222_Lecture11.pdf" style="font-weight:500" target="_blank">[Slides]</a></td>
             <td>
               <p class="lecture_desc">
                 Will generative agent-based models help us discover complex equilibria, or will they devolve into chaos? What new theories and scientific foundations do we need to interpret the equilibrium and chaos in worlds populated by generative agents?
