--- a/final_project_proposal.html
+++ b/final_project_proposal.html
@@ -96,13 +96,13 @@
 
     <h4>Final Presentation (30%):</h4>
     <ul>
-        <li><strong>Date:</strong> November 4 & 6, 2024.</li>
+        <li><strong>Date:</strong> December 2 & 4, 2024.</li>
         <li>Present your project and findings to the class. Your presentation should include:</li>
         <ul>
             <li>An overview of your research question and the purpose of the simulation.</li>
-            <li>A walk-through of how you used the generative agents to simulate class dynamics.</li>
+            <li>A walk-through of how you used the generative agents.</li>
             <li>The results and insights from the simulation.</li>
-            <li>A reflection on the accuracy and utility of the agents in representing class dynamics.</li>
+            <li>A reflection on the accuracy and utility of the agents.</li>
         </ul>
     </ul>
 
