--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 
           <tr>
             <td class="lecture_date">W, 10/30</td>
-            <td class="lecture_titles">Language and Schema of Simulations</td>
+            <td class="lecture_titles">Language and Schema of Simulations <a href="static_dir/pdf/StanfordCS222_Lecture12.pdf" style="font-weight:500" target="_blank">[Slides]</a></td>
             <td>
               <p class="lecture_desc">
                 How might we make simulations easy to create? What language and schema ought to describe the building blocks of our simulations, and where can we find inspiration for such a system? This discussion will explore prior systems that developed useful language and schema for complex systems (e.g., in data visualization, agent-based modeling).
